  upon shutdown and jvm exit (No jira)
- Created means for segregated Quartz schedulers per application. The bug was
  that the main scheduler has no idea where to location classes you try 
  to access in your scheduled job (No jira)
- Issue when reading empty persistent shared objects (APPSERVER-364)
- Removed Jacksum API, replaced with function available in commons-codec (APPSERVER-350)


Red5 0.8.0 RC2 (2009-02-07)
---------------------------
New Features:
- Testing: Added a new automated testing framework
  (http://jira.red5.org/confluence/display/docs/Chapter+20.+Testing+Red5)

Bugfixes:
- RemotingClient decoding errors (Jira APPSERVER-296)
- Codec typos (Jira APPSERVER-309)
- Exception is thrown when doing NetStream.seek operation (Jira SN-94)
- Scope access does not work if invoked from external Application
  (Jira APPSERVER-306)
- Childscopes not visible on customly created scopes (Jira APPSERVER-298)
- Config removal dynamically created room scopes (Jira APPSERVER-165)
- NullPointerException in RTMPProtocolDecoder.decodeHeader under load
  (Jira SN-103)
- Remote Shared Objects: Sync event doesnt dispatch (Jira CS-5)
- Server doesn't start on Windows (JIRA APPSERVER-336)
- Cannot run red5.bat when there is existing classpath set in environment
  (INSTALL-24)
- NetStream.send in record mode not working (Jira APPSERVER-329)
- NetStream.send "append" mode patch (Jira APPSERVER-338)
- Memory leak in RemotingConnection (Jira APPSERVER-328)
- Connection objects are not removed from parent scopes when a connection
  is refused in a sub-scope (Jira APPSERVER-261)
- WAR deployer is failing to extract war files (Jira APPSERVER-337)
- Security sandbox violation: BitmapData.draw (Jira APPSERVER-315)
- AMF0 does not echo Array's the way AMF3 does (Jira APPSERVER-311)
- Red5LoggerFactory fails with an NPE if you pass in a context name that
  hasn't been defined or is not known (Jira APPSERVER-341)
- red5.bat doesn't work on Windows machines, red5-debug.bat works, though.