@@ -34,6 +34,7 @@ Bugfixes:
   to access in your scheduled job (No jira)
 - Issue when reading empty persistent shared objects (APPSERVER-364)
 - Removed Jacksum API, replaced with function available in commons-codec (APPSERVER-350)
+- Added updated implementation of RtmpSampleAccess (APPSERVER-315)
 
 
 Red5 0.8.0 RC2 (2009-02-07)
